--- a/Content/styles.css
+++ b/Content/styles.css
@@ -32,7 +32,7 @@ body, html {
     background: -webkit-linear-gradient(270deg, hsla(221, 45%, 73%, 1) 0%, hsla(220, 78%, 29%, 1) 100%);
     position: fixed;
     width: 300px;
-    height: calc(100% - 10vh);
+    height: 100vh;
     overflow-y: hidden;
     top: 5.6em;
     left: 0;
