--- a/Admin/AdminMaster.Master
+++ b/Admin/AdminMaster.Master
@@ -97,7 +97,7 @@
                     <div class="header-link d-flex">
                         <i class="fa-solid fa-book header-icon fs-5"></i>
                         <h2>
-                            <a href="../Admin/AdminHome.aspx" class="fw-light fs-5 nav-link">Subjects</a>
+                            <a href="../Admin/Subjects.aspx" class="fw-light fs-5 nav-link">Subjects</a>
                         </h2>
                     </div>
                     <div class="accordion-item">
